# Intonator

./: CMakeLists.txt  intonator.filtergraph
Intonator/: CMakeLists.txt  PianoRoll.cpp  PianoRoll.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Intonator/header-only/: ChildNote.h  Fraction.h  Note.h  RootNote.h
